fix: Implement seamless theme switching and improve dark mode accessibility

--- a/src/WebApp/wwwroot/css/app.css
+++ b/src/WebApp/wwwroot/css/app.css
@@ -290,6 +290,27 @@ h1:focus {
         content: "An error has occurred."
     }
 
+body.dark {
+    background-color: #121212;
+    color: #ffffff;
+}
+
+body.dark .button.button-primary {
+    background: #FFF;
+    color: #000;
+}
+
+body.dark .button.button.button-secondary {
+    border: 1px solid #FFF;
+    background: #121212;
+    color: #FFF;
+}
+
+body.dark .catalog-item .catalog-name {
+    color: #ffffff;
+}
+
+
 .theme-selector {
     margin-left: 1rem;
 }
